# computer_graphics_FP

./: CMakeLists.txt
blender/: bus.blend  bus.blend1  car.blend  car.blend1  isle_base.obj.blend  isle_base.obj.blend1  temp_garden.blend  temp_garden.blend1  untitled.blend  untitled.blend1  untitled2.blend  untitled2.blend1  untitled3.blend
documentation/: Concepts and Ideas.txt  Guide.txt  Steps Taken.txt
models/: isle_base.mtl  isle_sea.mtl  leaf.mtl  moon.mtl  temp_building.mtl  temp_building2.mtl  temp_building3.mtl  temp_bus.mtl  temp_car.mtl  temp_garden.mtl
src/: config.h  glad.c  objloader.h  pointlight.h  scene.cpp
src/shaders/: asset.frag  asset.vert  base.frag  base.vert  first.vert  shader.h  sky.frag  sky.vert
